# Airline-Reservation-and-Management-System-Project

./: CMakeLists.txt  README.md  organizerHelper.txt
data/: aircraft.json  flightAttendant.json  flights.json  pilots.json  reservation.json  users.json
docs/: organizerHelper.txt
include/AIRCRAFT_HPP/: Aircraft.hpp
include/ENUMS/: flights_enum.hpp  user_enums.hpp
include/FLIGHT_HPP/: Flight.hpp
include/JSON_HPP/: jsonHelperFunctions.hpp
include/RESERVATION_HPP/: Reservation.hpp
include/USERS_HPP/: userClasses.hpp
src/AIRCRAFT_CPP/: Aircraft.cpp
src/FLIGHT_CPP/: Flight.cpp
src/JSONHELPERFUNCTION_CPP/: jsonHelperFunctions.cpp
src/JSON_CPP/: json.cpp
src/MAIN/: main.cpp
src/RESERVATION_CPP/: Reservation.cpp
src/USERS_CPP/: userClasses.cpp
